# AdventOfCode

./: .gitignore  .pylintrc  EXECTIMES.md  LICENSE  NOTES.md  README.md  requirements.txt  solve.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
2015/: README.md  d1.py  d11.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d23.py  d3.py  d4.py  d5.py  d6.py  d7.py  d9.py  day1.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py
2015/day10/: Makefile  dbg.h  main.c
2015/day12/: Makefile  main.c
2015/day8/: Makefile  fileops.c  fileops.h  main.c
2016/: README.md  d1.py  d12.py  d14.py  d2.py  d23.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
2017/: README.md  d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
2018/: README.md  d1.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  template.py
2019/: d11.py  d13.py  d2.py  d23.py  d5.py  d7.py  d9.py  intcode.py
2020/day4/: Cargo.toml
2020/day4/src/: main.rs
2021/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d2.py  d20.py  d21.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  python3  solve.py  utils.py
2022/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d2.py  d21.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
pyrust/: Cargo.toml  pyproject.toml
pyrust/src/: lib.rs
(+85 files in other folders)
