[package]
name = "day4"
version = "0.1.0"
authors = ["MichaelSquires <blackout@repmovsb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ""
clap = ""
fern = { version = "", features = ["colored"] }
log = ""
itertools = ""
